
2007-06-01  Benno Schulenberg  <benno@vertaalt.nl>

	* Makefile, doc/Makefile, registry/Makefile:
	Updates and improvements.

2007-05-31  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/tp-robot, lib/sgml.py: Correct two paths, remove two
	special paths.

	* lib/config.py, lib/registry.py, bin/po-register, bin/tp-robot:
	Configure tmp/ subdir in a better way.

	* bin/tp-robot: Correct some grammar and misspellings in the
	messages, replace "`" with "'", and remove the long obsolete
	mentioning of Linux International mailing lists.

	* README: Add first bits of procedural info from Karl.

2007-05-31  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/config.py, lib/registry.py, bin/po-register, bin/tp-robot:
	Put tmp/ subdir under homedir, not under site/.

	* bin/run-queue.sh, README: Give robot mail queue a better name.

2007-05-30  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/run-queue.sh, README: Bring the processing of the robot
	mail queue up to date, and document the new situation.

2007-05-29  Benno Schulenberg  <benno@vertaalt.nl>

	* Makefile, doc/Makefile, lib/config.py, web/Makefile:
	Switch things over to user tp.

2007-05-27  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py: Use quotes and indentation more consistently,
	change the texts a bit, and put the link to the latest POT file
	in a more logical place.

	* web/layout.html: Condense the page a little.

	* doc/Makefile, web/Makefile: Improve the dependencies.

	* lib/config.py, lib/data.py, web/Makefile, README:
	Move the cache directory out of the site directory.

	* TODO: Add list of things still to do.

2007-05-26  Benno Schulenberg  <benno@vertaalt.nl>

	* README: Show how Apache is to be configured.

2007-05-26  Benno Schulenberg  <benno@vertaalt.nl>

	* Makefile, doc/Makefile, lib/config.py, lib/localweb.py,
	web/Makefile, web/layout.html: Put the static HTML files in
	documentroot, and the redirecting files in a pass/ subdir.

2007-05-26  Benno Schulenberg  <benno@vertaalt.nl>
