@@ -1,4 +1,9 @@
 
+2007-06-02  Benno Schulenberg  <benno@vertaalt.nl>
+
+	* tools/mirror_tp.py, tools/mkindex.py, lib/config.py:
+	Simplify the mirror script, add the make_index script.
+
 2007-06-01  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* Makefile, doc/Makefile, registry/Makefile:
